--- a/install
+++ b/install
@@ -62,11 +62,11 @@ if [[ $(__is_fzf_installed) == false ]]; then
 fi
 
 if [[ -d $__prefix_expand ]]; then
-    printf "\ncustom-git is already installed. Stopping installation.\n"
+    printf "\ncustom-git is already installed on your system.\n"
     exit 0
 fi
 
-printf "Installing custom-git ..."
+printf "\nInstalling custom-git ..."
 git clone https://github.com/custom-git/custom-git-bash.git $__prefix_expand &> /dev/null
 if [[ $? != $__SUCCESS ]]; then
     printf "\rSome error occurred while fetching custom-git. Please check your network.\n"
@@ -96,7 +96,7 @@ if [[ ! "\$PATH" == *$custom_git_base/util* ]]; then
 fi
 
 FZF_WIDGET_TMUX=1
-export FZF_DEFAULT_OPTS="--height 80% --layout reverse --border --ansi --preview-window 'right:60%:wrap' --margin=1,4"
+export FZF_DEFAULT_OPTS="--reverse --border --height 80%"
 
 EOF
 done
@@ -147,5 +147,4 @@ for shell in "${shells[@]}"; do
     esac
 done
 
-printf '\nUse uninstall script to remove custom-git.\n'
 echo 'For more information, see: https://github.com/custom-git/custom-git-bash'
