--- a/install
+++ b/install
@@ -94,9 +94,14 @@ fi
 if [[ ! "\$PATH" == *$custom_git_base/util* ]]; then
     export PATH="\${PATH:+\${PATH}:}$custom_git_base/util"
 fi
+if [[ ! "\$PATH" == *$custom_git_base/cmd* ]]; then
+    export PATH="\${PATH:+\${PATH}:}$custom_git_base/custom-console/cmd"
+fi
+if [[ ! "\$PATH" == *$custom_git_base/cmd* ]]; then
+    export PATH="\${PATH:+\${PATH}:}$custom_git_base/custom-console/util"
+fi
 
-export FZF_WIDGET_TMUX=1
-export FZF_DEFAULT_OPTS="--reverse --border rounded --height 80%"
+export FZF_DEFAULT_OPTS="--reverse --border --height 80%"
 
 EOF
 done
