--- a/install
+++ b/install
@@ -94,10 +94,10 @@ fi
 if [[ ! "\$PATH" == *$custom_git_base/util* ]]; then
     export PATH="\${PATH:+\${PATH}:}$custom_git_base/util"
 fi
-if [[ ! "\$PATH" == *$custom_git_base/cmd* ]]; then
+if [[ ! "\$PATH" == *$custom_git_base/custom-console/cmd* ]]; then
     export PATH="\${PATH:+\${PATH}:}$custom_git_base/custom-console/cmd"
 fi
-if [[ ! "\$PATH" == *$custom_git_base/cmd* ]]; then
+if [[ ! "\$PATH" == *$custom_git_base/custom-console/util* ]]; then
     export PATH="\${PATH:+\${PATH}:}$custom_git_base/custom-console/util"
 fi
 
