--- a/install
+++ b/install
@@ -17,7 +17,14 @@ MOVE_UP=$(tput cuu 1)
 CLEAR_LINE=$(tput el 1)
 
 function mucl() {
-    echo "${MOVE_UP}${CLEAR_LINE}${MOVE_UP}"
+    if [[ $# -eq 0 ]]; then
+        numIterations=1
+    else
+        numIterations=${1}
+    fi
+    for (( i = 0; i < numIterations; i++)); do
+        echo "${MOVE_UP}${CLEAR_LINE}${MOVE_UP}"
+    done
 }
 
 currDir="$(pwd)"
@@ -157,6 +164,52 @@ function assert_success() {
     assert_equal "${status}" ${SUCCESS} "${msg}"
 }
 
+function install_clipboard() {
+
+    if ! $(is_command_installed "npm"); then
+        banner_color_err 1 "npm not installed." 2
+        return ${FAILURE}
+    fi
+    print_info 0 "Installing clipboard-cli ..." 1
+    sudo npm install -g clipboard-cli &> /dev/null
+    if (( $? != SUCCESS )); then
+        mucl 2
+        banner_color_err 0 "clipboard-cli installation failed." 2
+        return ${FAILURE}
+    fi
+
+    mucl 2
+    banner_color 0 "magenta" "*" "clipboard-cli installed." 2
+}
+
+function install_fzf() {
+
+    print_info 0 "Installing fzf ..." 1
+
+    git clone --depth 1 https://github.com/junegunn/fzf.git "${FZF_HOME}" &> /dev/null
+    if (( $? != SUCCESS )); then
+        mucl
+        banner_color_err 0 "Fetching fzf failed. Please check your network." 2
+        return ${FAILURE}
+    fi
+
+    cd "${FZF_HOME}" || {
+        mucl
+        banner_color_err 0 "couldn't enter directory: ${FZF_HOME}" 2
+        return ${FAILURE}
+    }
+    ./install --all &> /dev/null
+
+    if (( $? != SUCCESS )); then
+        mucl
+        banner_color_err 0 "fzf installation failed." 2
+        return ${FAILURE}
+    fi
+
+    mucl
+    banner_color 0 "magenta" "*" "fzf installed." 2
+}
+
 #####################
 # Enable custom-git #
 #####################
@@ -175,7 +228,7 @@ done
 
 if [[ ${#shells[@]} -eq 0 ]]; then
     print_err 0 "custom-git is only supported for bash and zsh shells. Stopping installation." 2
-    exit $FAILURE
+    exit ${FAILURE}
 fi
 
 prefix='~/.custom-git'
@@ -185,70 +238,20 @@ FZF_HOME="${HOME}"/.fzf
 CUSTOM_GIT_BASH_REPO_URL="https://github.com/custom-git/custom-git-bash"
 CUSTOM_GIT_CLONE_URL="${CUSTOM_GIT_BASH_REPO_URL}.git"
 
-function install_clipboard() {
-
-    clipboard_installation_status=$SUCCESS
-
-    if ! $(is_command_installed "npm"); then
-        clipboard_installation_status=$FAILURE
-        banner_color_err 1 "npm not installed." 2
-        return
-    fi
-    print_info 0 "Installing clipboard-cli ..." 1
-    sudo npm install -g clipboard-cli &> /dev/null
-
-    if (( $? != SUCCESS )); then
-        clipboard_installation_status=$FAILURE
-        mucl
-        mucl
-        banner_color_err 0 "clipboard-cli installation failed." 2
-        return
-    fi
-
-    mucl
-    mucl
-    banner_color 0 "magenta" "*" "clipboard-cli installed." 2
-}
-
 if ! $(is_command_installed "clipboard"); then
 
     install_clipboard
-    if [[ $clipboard_installation_status -eq $FAILURE ]]; then
+    if (( $? != SUCCESS )); then
         print_info 0 "Please install clipboard-cli from " 0
         print_as 0 "magenta" "bold" "\"https://github.com/sindresorhus/clipboard-cli\"" 1
         print_info 0 "Otherwise, some custom-git commands may not work correctly." 2
     fi
 fi
 
-function install_fzf() {
-
-    print_info 0 "Installing fzf ..." 1
-
-    fzf_installation_status=${SUCCESS}
-    git clone --depth 1 https://github.com/junegunn/fzf.git "${FZF_HOME}" &> /dev/null
-    cd "${FZF_HOME}" || {
-        fzf_installation_status=$FAILURE
-        mucl
-        banner_color_err 0 "couldn't enter directory: ${FZF_HOME}" 2
-        return
-    }
-    ./install --all &> /dev/null
-
-    if (( $? != SUCCESS )); then
-        fzf_installation_status=${FAILURE}
-        mucl
-        banner_color_err 0 "fzf installation failed." 2
-        return
-    fi
-
-    mucl
-    banner_color 0 "magenta" "*" "fzf installed." 2
-}
-
 if ! $(is_command_installed "fzf"); then
 
     install_fzf
-    if [[ $fzf_installation_status -eq $FAILURE ]]; then
+    if (( $? != SUCCESS )); then
         print_info 0 "Please install fzf from " 0
         print_as 0 "magenta" "bold" "https://github.com/junegunn/fzf#installation" 1
         print_as 0 "blue" "and try again..." 2
@@ -258,7 +261,7 @@ fi
 
 if [[ -d "${CUSTOM_GIT_HOME}" ]]; then
     print_info 0 "custom-git is already installed on your system." 2
-    exit $SUCCESS
+    exit ${SUCCESS}
 fi
 
 latestReleaseVersion="release-1.0"
